# biy

./: .gitignore  README.md  WORK_LOG.md  package-lock.json  package.json
biy-settings/: Package.swift
biy-settings/Sources/: Config.swift  SettingsApp.swift
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
termy-settings/: Package.swift
termy-settings/Sources/: Config.swift  SettingsApp.swift  SshEditView.swift
