[package]
name = "biy"
version = "0.2.0"
description = "AI-integrated terminal emulator"
authors = ["kyoungyoon"]
license = "MIT"
edition = "2021"

[lib]
name = "biy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
portable-pty = "0.8"
ssh2 = "0.9"
dirs = "6"
